# ProjetClassificationDeFeuilles

./: README.md  Rapport_feuille_.odt  SegFondUni.py  Window.py  arbre.json  contour.py  distance_transform.py  main.py  segmentation.py
project/: CMakeLists.txt  cmd.txt  main.cpp  val.txt
