PROJECT(ConvexHull)

#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE( Boost 1.65.1 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

list(APPEND CMAKE_MODULE_PATH ../DGtal/build)
set(DGtal_DIR ../DGtal/build)
set(CMAKE_CXX_FLAGS "${CMAKE_CXXFLAGS} -std=gnu++11")

FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
ADD_EXECUTABLE(ConvexHull main)

TARGET_LINK_LIBRARIES(ConvexHull LINK_PUBLIC ${DGTAL_LIBRARIES} ${Boost_LIBRARIES})
